<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:contentPadding="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/pdfRl"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp"
            android:background="@color/dark_grey">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:id="@+id/ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_Tv"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_toEndOf="@id/pdfRl"
            android:layout_toStartOf="@+id/moreBtn"
            android:maxLines="1"
            android:text="@string/the_book_title"
            android:ellipsize="end"
            />
        <TextView
            android:id="@+id/description_Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_Tv"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="4"
            android:text="@string/the_description_of_the_book" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:id="@+id/category_Tv"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:maxLines="1"
            android:text="@string/category"
            />
        <TextView
            android:id="@+id/size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/pdfRl"
            android:maxLines="1"
            android:text="@string/_13mb"/>

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/category_Tv"
            android:layout_toEndOf="@id/size_tv"
            android:maxLines="1"
            android:text="@string/dd_mm_yyyy"
            android:textAlignment="center"/>


        <ImageButton
            android:id="@+id/favorite_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/baseline_favorite_black"
            android:padding="5dp"
            android:background="@android:color/transparent"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>