<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/toolbar_up"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo_iv"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="39dp"
            android:src="@drawable/read" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginStart="85dp"
            android:layout_marginTop="180dp"
            android:fontFamily="@font/aclonica"
            android:text="Please Login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp" />

    </RelativeLayout>




    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@drawable/wave"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextTextEmailAddress4"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:backgroundTint="@color/back_ground_color"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/email_ID"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/back_ground_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_up" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/back_ground_color"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/back_ground_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress4" />

    <TextView
        android:textColor="@color/black"
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="24dp"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="300sp"
        android:layout_height="48dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_btn01"
        android:text="@string/login_button"
        android:textSize="24sp"
        android:textColor="#FDFDFD"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <TextView
        android:id="@+id/account_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="30dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#0E0E0E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/signUpLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/sign_up"
        android:textColor="@color/dark_back"
        android:textStyle="normal"
        app:layout_constraintStart_toEndOf="@+id/account_register_text"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>