<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PdfListAdminActivity">

    <RelativeLayout
        android:id="@+id/toolbar_up"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar02">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_image"
            android:layout_width="37dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:background="@color/dark_back"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <TextView
            android:id="@+id/tittle_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/books"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:ignore="RelativeOverlap" />
        <TextView
            android:id="@+id/sub_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tittle_tv"
            android:text="@string/category"
            android:textColor="@color/white" />

    </RelativeLayout>
    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_up"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/baseline_search_24"
        android:hint="@string/search"
        android:padding="10dp"
        android:textColorHint="@color/back_ground_color"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/books_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_bar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/row_pdf_admin" />

</RelativeLayout>