<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">
    <RelativeLayout
        android:id="@+id/toolbar_up_re"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:background="@drawable/shape_toolbar01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_image"
            android:layout_width="37dp"
            android:layout_height="30dp"
            android:layout_marginStart="3dp"
            android:background="@color/dark_back"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo_iv"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/read" />

        <TextView
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="180dp"
            android:fontFamily="@font/aclonica"
            android:text="Create New Account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </RelativeLayout>


    <EditText
        android:id="@+id/first_name"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:autofillHints=""
        android:backgroundTint="@color/back_ground_color"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAllCaps="false"
        android:textColorHint="@color/back_ground_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_up_re" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/back_ground_color"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColorHint="@color/back_ground_color"
        app:layout_constraintBottom_toTopOf="@+id/email_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/back_ground_color"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColorHint="@color/back_ground_color"
        app:layout_constraintBottom_toTopOf="@id/password_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:backgroundTint="@color/back_ground_color"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:maxLength="16"
        android:minHeight="48dp"
        android:textAllCaps="false"
        android:textColorHint="@color/back_ground_color"
        app:layout_constraintBottom_toTopOf="@+id/conf_password_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />

    <EditText
        android:id="@+id/conf_password_et"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/back_ground_color"
        android:drawableStart="@drawable/baseline_remove_red_eye_24"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColorHint="@color/back_ground_color"
        app:layout_constraintBottom_toTopOf="@+id/terms_cond_cbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_et"
        app:layout_constraintVertical_bias="0.281" />
    <CheckBox
        android:id="@+id/terms_cond_cbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="125dp"
        android:text="I Agree To The Terms &amp; Condition"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conf_password_et"
        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_btn"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:background="@drawable/shape_btn01"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="125dp"
        android:backgroundTint="@color/back_ground_color"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent" />




    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textCursorDrawable="@color/dark_back"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/end_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="175dp"
        android:text="login"
        android:textColor="@color/back_ground_color"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/end_img"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/end_img"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/wave"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>